--- a/index.html
+++ b/index.html
@@ -65,18 +65,16 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      // Set today's date as the minimum for the date input
       const today = new Date().toISOString().split('T')[0];
       document.getElementById('date').setAttribute('min', today);
 
-      // Initialize Supabase
       const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
       const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
       const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
       // Load Units into Dropdown
       async function loadUnits() {
-        const { data, error } = await supabase.from('units').select('id, name');
+        const { data, error } = await supabase.from('units').select('name');
         const unitSelect = document.getElementById('unit');
 
         if (error) {
@@ -86,7 +84,7 @@
 
         data.forEach(unit => {
           const option = document.createElement('option');
-          option.value = unit.id;
+          option.value = unit.name;
           option.textContent = unit.name;
           unitSelect.appendChild(option);
         });
@@ -102,14 +100,14 @@
         const phone = document.getElementById('phone').value.trim();
         const email = document.getElementById('email').value.trim();
         const address = document.getElementById('address').value.trim();
-        const unit_id = document.getElementById('unit').value;
+        const unit = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
 
         // Check for existing booking
         const { data: existing, error: checkError } = await supabase
           .from('bookings')
           .select('*')
-          .eq('unit_id', unit_id)
+          .eq('unit', unit)
           .eq('date', date);
 
         if (existing && existing.length > 0) {
@@ -120,7 +118,7 @@
 
         // Insert booking
         const { error } = await supabase.from('bookings').insert([
-          { name, phone, email, address, unit_id, date }
+          { name, phone, email, address, unit, date }
         ]);
 
         if (error) {
