--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
@@ -54,7 +55,7 @@
     </form>
 
     <div id="successMessage" class="mt-3 text-success" style="display:none;">
-      Booking successful!
+      Booking successful! Confirmation sent to your email.
     </div>
     <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
       That unit is already booked on this date.
@@ -72,11 +73,11 @@
       const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
       const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-      // Load Units into Dropdown
+      emailjs.init('PXm_wNk9alao8HIpp'); // EmailJS public key
+
       async function loadUnits() {
         const { data, error } = await supabase.from('units').select('name');
         const unitSelect = document.getElementById('unit');
-
         if (error) {
           console.error('Error loading units:', error);
           return;
@@ -92,7 +93,6 @@
 
       await loadUnits();
 
-      // Handle Form Submission
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -103,7 +103,6 @@
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
 
-        // Lookup unit ID by name
         const { data: unitData, error: unitError } = await supabase
           .from('units')
           .select('id')
@@ -117,7 +116,6 @@
 
         const unitId = unitData.id;
 
-        // Check if unit already booked on selected date
         const { data: existing, error: checkError } = await supabase
           .from('bookings')
           .select('*')
@@ -130,7 +128,6 @@
           return;
         }
 
-        // Insert booking
         const { error: insertError } = await supabase.from('bookings').insert([
           { name, phone, email, address, unit: unitId, date }
         ]);
@@ -138,6 +135,25 @@
         if (insertError) {
           alert('Error booking: ' + insertError.message);
         } else {
+          const templateParams = {
+            name: name,
+            email: email,
+            phone: phone,
+            address: address,
+            unit: unitName,
+            date: date
+          };
+
+          // Send Order Confirmation
+          emailjs.send('service_1zxrd0j', 'template_nqep0gt', templateParams).catch((error) => {
+            console.error('Order Confirmation email error:', error);
+          });
+
+          // Send Auto-Reply
+          emailjs.send('service_1zxrd0j', 'template_6z2dcsj', templateParams).catch((error) => {
+            console.error('Auto-Reply email error:', error);
+          });
+
           document.getElementById('successMessage').style.display = 'block';
           document.getElementById('errorMessage').style.display = 'none';
           document.getElementById('bookingForm').reset();
