--- a/index.html
+++ b/index.html
@@ -4,161 +4,126 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   <style>
     body {
-      background-color: #f8f9fa;
       font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
     }
-
-    .booking-form {
-      max-width: 500px;
-      margin: 50px auto;
+    .container {
       background: white;
-      padding: 30px;
-      border-radius: 10px;
+      padding: 2rem;
+      border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      width: 100%;
+      max-width: 400px;
     }
-
-    .form-control,
-    .form-select {
-      background-color: #e9f0ff;
+    .container h1 {
+      text-align: center;
+      margin-bottom: 1rem;
     }
-
-    .btn-primary {
-      background-color: #006aff;
+    input, select {
+      width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      background: #0066ff;
+      color: white;
+      font-weight: bold;
       border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
     }
-
-    .btn-primary:hover {
-      background-color: #0051c9;
+    .success {
+      margin-top: 1rem;
+      text-align: center;
+      color: green;
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="booking-form text-center">
-    <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" class="mb-3">
-    <h2 class="mb-3">Slide Guys Booking</h2>
-    <p>Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
-    
-    <form id="bookingForm">
-      <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
-      <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
-      <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
-      <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
-      <select id="unit" class="form-select mb-2" required>
-        <option value="" disabled selected>Select a unit</option>
+  <div class="container">
+    <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" style="display:block; margin:0 auto 1rem;" />
+    <h1>Slide Guys Booking</h1>
+    <p style="text-align:center;">Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
+    <form id="booking-form">
+      <input type="text" id="name" placeholder="Full Name" required />
+      <input type="text" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address" required />
+      <input type="text" id="address" placeholder="Address" required />
+      <select id="unit" required>
+        <option value="">Select a unit</option>
+        <option value="Blue Wave">Blue Wave</option>
+        <option value="Red Dragon">Red Dragon</option>
+        <!-- Add more units here if needed -->
       </select>
-      <input type="date" id="date" class="form-control mb-3" required />
-      <button type="submit" class="btn btn-primary w-100">Reserve</button>
+      <input type="date" id="date" required />
+      <button type="submit">Reserve</button>
+      <p class="success" id="success-msg">Booking successful! Confirmation sent to your email.</p>
     </form>
-
-    <div id="successMessage" class="mt-3 text-success" style="display:none;">
-      Booking successful! Confirmation sent to your email.
-    </div>
-    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
-      That unit is already booked on this date.
-    </div>
   </div>
 
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', async () => {
-      const today = new Date().toISOString().split('T')[0];
-      document.getElementById('date').setAttribute('min', today);
+    const SUPABASE_URL = 'https://vaobmohukgcqfvnclqyh.supabase.co';
+    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
+    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-      const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
-      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
-      const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+    emailjs.init('Iwl6MSECTva1JzP4r'); // EmailJS User ID
 
-      emailjs.init('PXm_wNk9alao8HIpp'); // EmailJS public key
+    document.getElementById('booking-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
 
-      async function loadUnits() {
-        const { data, error } = await supabase.from('units').select('name');
-        const unitSelect = document.getElementById('unit');
-        if (error) {
-          console.error('Error loading units:', error);
-          return;
-        }
+      const name = document.getElementById('name').value;
+      const phone = document.getElementById('phone').value;
+      const email = document.getElementById('email').value;
+      const address = document.getElementById('address').value;
+      const unit = document.getElementById('unit').value;
+      const date = document.getElementById('date').value;
 
-        data.forEach(unit => {
-          const option = document.createElement('option');
-          option.value = unit.name;
-          option.textContent = unit.name;
-          unitSelect.appendChild(option);
-        });
+      // Save booking to Supabase
+      const { data, error } = await supabase.from('bookings').insert([
+        { name, phone, email, address, unit, date }
+      ]);
+
+      if (error) {
+        alert('Error creating booking: ' + error.message);
+        return;
       }
 
-      await loadUnits();
-
-      document.getElementById('bookingForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        const name = document.getElementById('name').value.trim();
-        const phone = document.getElementById('phone').value.trim();
-        const email = document.getElementById('email').value.trim();
-        const address = document.getElementById('address').value.trim();
-        const unitName = document.getElementById('unit').value;
-        const date = document.getElementById('date').value;
-
-        const { data: unitData, error: unitError } = await supabase
-          .from('units')
-          .select('id')
-          .eq('name', unitName)
-          .single();
-
-        if (unitError || !unitData) {
-          alert('Error finding unit ID for "' + unitName + '"');
-          return;
-        }
-
-        const unitId = unitData.id;
-
-        const { data: existing, error: checkError } = await supabase
-          .from('bookings')
-          .select('*')
-          .eq('unit', unitId)
-          .eq('date', date);
-
-        if (existing && existing.length > 0) {
-          document.getElementById('errorMessage').style.display = 'block';
-          document.getElementById('successMessage').style.display = 'none';
-          return;
-        }
-
-        const { error: insertError } = await supabase.from('bookings').insert([
-          { name, phone, email, address, unit: unitId, date }
-        ]);
-
-        if (insertError) {
-          alert('Error booking: ' + insertError.message);
-        } else {
-          const templateParams = {
-            name: name,
-            email: email,
-            phone: phone,
-            address: address,
-            unit: unitName,
-            date: date
-          };
-
-          // Send Order Confirmation
-          emailjs.send('service_1zxrd0j', 'template_nqep0gt', templateParams).catch((error) => {
-            console.error('Order Confirmation email error:', error);
-          });
-
-          // Send Auto-Reply
-          emailjs.send('service_1zxrd0j', 'template_6z2dcsj', templateParams).catch((error) => {
-            console.error('Auto-Reply email error:', error);
-          });
-
-          document.getElementById('successMessage').style.display = 'block';
-          document.getElementById('errorMessage').style.display = 'none';
-          document.getElementById('bookingForm').reset();
-        }
+      // Send confirmation email to customer
+      emailjs.send('service_1zxrd0j', 'template_nqep0gt', {
+        name, phone, email, address, unit, date
+      }).then(() => {
+        console.log('Customer confirmation sent');
+      }).catch((err) => {
+        console.error('Customer email error:', err);
       });
+
+      // Send auto-reply to business
+      emailjs.send('service_1zxrd0j', 'template_6z2dcsj', {
+        name, phone, email, address, unit, date
+      }).then(() => {
+        console.log('Business auto-reply sent');
+      }).catch((err) => {
+        console.error('Business email error:', err);
+      });
+
+      document.getElementById('success-msg').style.display = 'block';
+      document.getElementById('booking-form').reset();
     });
   </script>
 </body>
