--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
     const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    emailjs.init('Iwl6MSECTva1JzP4r'); // EmailJS User ID
+    emailjs.init('PXm_wNk9aIao8Hlpp');
 
     document.getElementById('booking-form').addEventListener('submit', async function(e) {
       e.preventDefault();
