--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f7f7f7;
+      background-color: #f5f5f5;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
     }
     .container {
@@ -22,108 +21,132 @@
       border-radius: 12px;
       box-shadow: 0 4px 20px rgba(0,0,0,0.1);
       width: 100%;
-      max-width: 400px;
+      max-width: 420px;
     }
-    .container h1 {
+    h1 {
       text-align: center;
-      margin-bottom: 1rem;
+      font-size: 1.8rem;
     }
-    input, select {
+    p {
+      text-align: center;
+      font-size: 0.95rem;
+      margin-bottom: 1.5rem;
+    }
+    input, select, button {
       width: 100%;
-      padding: 0.75rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
+      padding: 12px;
+      margin: 8px 0;
+      border-radius: 6px;
       border: 1px solid #ccc;
       font-size: 1rem;
     }
     button {
-      width: 100%;
-      padding: 0.75rem;
-      background: #0066ff;
+      background-color: #0066ff;
       color: white;
-      font-weight: bold;
       border: none;
-      border-radius: 8px;
       cursor: pointer;
-      font-size: 1rem;
+      font-weight: bold;
     }
-    .success {
-      margin-top: 1rem;
-      text-align: center;
-      color: green;
-      display: none;
+    button:hover {
+      background-color: #004ecc;
+    }
+    .logo {
+      display: block;
+      margin: 0 auto 10px;
+      max-width: 100px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" style="display:block; margin:0 auto 1rem;" />
-    <h1>Slide Guys Booking</h1>
-    <p style="text-align:center;">Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
+    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="Slide Guys Logo" />
+    <h1><strong>Slide Guys Booking</strong></h1>
+    <p>Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
     <form id="booking-form">
       <input type="text" id="name" placeholder="Full Name" required />
-      <input type="text" id="phone" placeholder="Phone Number" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
       <input type="email" id="email" placeholder="Email Address" required />
       <input type="text" id="address" placeholder="Address" required />
       <select id="unit" required>
         <option value="">Select a unit</option>
-        <option value="Blue Wave">Blue Wave</option>
-        <option value="Red Dragon">Red Dragon</option>
-        <!-- Add more units here if needed -->
       </select>
       <input type="date" id="date" required />
       <button type="submit">Reserve</button>
-      <p class="success" id="success-msg">Booking successful! Confirmation sent to your email.</p>
     </form>
   </div>
 
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+
   <script>
-    const SUPABASE_URL = 'https://vaobmohukgcqfvnclqyh.supabase.co';
-    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
-    const supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    // Supabase Config
+    const supabaseUrl = "https://vaobmohukgcqfvnclqyh.supabase.co";
+    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M";
+    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
-    emailjs.init('PXm_wNk9aIao8Hlpp');
+    // EmailJS Config
+    emailjs.init("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M");
 
-    document.getElementById('booking-form').addEventListener('submit', async function(e) {
+    // Populate unit options
+    async function loadUnits() {
+      const { data, error } = await supabase.from("units").select("name");
+      if (!error && data) {
+        const unitSelect = document.getElementById("unit");
+        data.forEach(unit => {
+          const option = document.createElement("option");
+          option.value = unit.name;
+          option.textContent = unit.name;
+          unitSelect.appendChild(option);
+        });
+      }
+    }
+
+    loadUnits();
+
+    // Booking submit
+    document.getElementById("booking-form").addEventListener("submit", async (e) => {
       e.preventDefault();
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const address = document.getElementById("address").value.trim();
+      const unit = document.getElementById("unit").value;
+      const date = document.getElementById("date").value;
 
-      const name = document.getElementById('name').value;
-      const phone = document.getElementById('phone').value;
-      const email = document.getElementById('email').value;
-      const address = document.getElementById('address').value;
-      const unit = document.getElementById('unit').value;
-      const date = document.getElementById('date').value;
+      // Check for existing booking
+      const { data: existing, error: fetchError } = await supabase
+        .from("bookings")
+        .select("*")
+        .eq("unit", unit)
+        .eq("date", date);
 
-      // Save booking to Supabase
-      const { data, error } = await supabase.from('bookings').insert([
-        { name, phone, email, address, unit, date }
-      ]);
-
-      if (error) {
-        alert('Error creating booking: ' + error.message);
+      if (existing.length > 0) {
+        alert("That unit is already booked for this date.");
         return;
       }
 
-      // Send confirmation email to customer
-      emailjs.send('service_1zxrd0j', 'template_nqep0gt', {
+      // Add booking
+      const { error } = await supabase.from("bookings").insert([{ name, phone, email, address, unit, date }]);
+
+      if (error) {
+        alert("Booking failed. Please try again.");
+        return;
+      }
+
+      // Send confirmation to customer
+      emailjs.send("service_1zxrd0j", "template_nqep0gt", {
         name, phone, email, address, unit, date
-      }).then(() => {
-        console.log('Customer confirmation sent');
-      }).catch((err) => {
-        console.error('Customer email error:', err);
       });
 
       // Send auto-reply to business
-      emailjs.send('service_1zxrd0j', 'template_6z2dcsj', {
+      emailjs.send("service_1zxrd0j", "template_6z2dcsj", {
         name, phone, email, address, unit, date
-      }).then(() => {
-        console.log('Business auto-reply sent');
-      }).catch((err) => {
-        console.error('Business email error:', err);
       });
 
-      document.getElementById('success-msg').style.display = 'block';
-      document.getElementById('booking-form').reset();
+      alert("Booking confirmed!");
+      document.getElementById("booking-form").reset();
     });
   </script>
 </body>
