--- a/index.html
+++ b/index.html
@@ -4,150 +4,84 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: start;
       min-height: 100vh;
-      margin: 0;
+      background: #f5f7fa;
     }
-    .container {
-      background: white;
+    main {
+      max-width: 500px;
+      margin-top: 2rem;
       padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 420px;
+      background: white;
+      border-radius: 1rem;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     }
     h1 {
       text-align: center;
-      font-size: 1.8rem;
-    }
-    p {
-      text-align: center;
-      font-size: 0.95rem;
-      margin-bottom: 1.5rem;
-    }
-    input, select, button {
-      width: 100%;
-      padding: 12px;
-      margin: 8px 0;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-    button {
-      background-color: #0066ff;
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    button:hover {
-      background-color: #004ecc;
     }
     .logo {
       display: block;
-      margin: 0 auto 10px;
-      max-width: 100px;
+      margin: 0 auto 1rem;
+      width: 80px;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
-  <div class="container">
-    <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="Slide Guys Logo" />
-    <h1><strong>Slide Guys Booking</strong></h1>
+  <main>
+    <img src="https://reactjs.org/logo-og.png" alt="Logo" class="logo" />
+    <h1>Slide Guys Booking</h1>
     <p>Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
     <form id="booking-form">
       <input type="text" id="name" placeholder="Full Name" required />
       <input type="tel" id="phone" placeholder="Phone Number" required />
       <input type="email" id="email" placeholder="Email Address" required />
-      <input type="text" id="address" placeholder="Address" required />
+      <input type="text" id="address" placeholder="Delivery Address" required />
       <select id="unit" required>
-        <option value="">Select a unit</option>
+        <option value="" disabled selected>Select a unit</option>
       </select>
       <input type="date" id="date" required />
       <button type="submit">Reserve</button>
     </form>
-  </div>
-
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <p id="status-message"></p>
+  </main>
 
   <script>
-    // Supabase Config
-    const supabaseUrl = "https://vaobmohukgcqfvnclqyh.supabase.co";
-    const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M";
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    const supabase = supabase.createClient(
+      "https://vaobmohukgcqfvnclqyh.supabase.co",
+      "your-anon-public-key-here"
+    );
 
-    // EmailJS Config
-    emailjs.init("eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M");
-
-    // Populate unit options
     async function loadUnits() {
       const { data, error } = await supabase.from("units").select("name");
-      if (!error && data) {
-        const unitSelect = document.getElementById("unit");
-        data.forEach(unit => {
-          const option = document.createElement("option");
-          option.value = unit.name;
-          option.textContent = unit.name;
-          unitSelect.appendChild(option);
-        });
-      }
-    }
-
-    loadUnits();
-
-    // Booking submit
-    document.getElementById("booking-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const name = document.getElementById("name").value.trim();
-      const phone = document.getElementById("phone").value.trim();
-      const email = document.getElementById("email").value.trim();
-      const address = document.getElementById("address").value.trim();
-      const unit = document.getElementById("unit").value;
-      const date = document.getElementById("date").value;
-
-      // Check for existing booking
-      const { data: existing, error: fetchError } = await supabase
-        .from("bookings")
-        .select("*")
-        .eq("unit", unit)
-        .eq("date", date);
-
-      if (existing.length > 0) {
-        alert("That unit is already booked for this date.");
-        return;
-      }
-
-      // Add booking
-      const { error } = await supabase.from("bookings").insert([{ name, phone, email, address, unit, date }]);
 
       if (error) {
-        alert("Booking failed. Please try again.");
+        console.error("Error loading units:", error.message);
         return;
       }
 
-      // Send confirmation to customer
-      emailjs.send("service_1zxrd0j", "template_nqep0gt", {
-        name, phone, email, address, unit, date
+      if (!data || data.length === 0) {
+        console.warn("No units returned from Supabase.");
+        return;
+      }
+
+      const unitSelect = document.getElementById("unit");
+      data.forEach(unit => {
+        const option = document.createElement("option");
+        option.value = unit.name;
+        option.textContent = unit.name;
+        unitSelect.appendChild(option);
       });
 
-      // Send auto-reply to business
-      emailjs.send("service_1zxrd0j", "template_6z2dcsj", {
-        name, phone, email, address, unit, date
-      });
+      console.log("Units loaded:", data);
+    }
 
-      alert("Booking confirmed!");
-      document.getElementById("booking-form").reset();
-    });
+    document.addEventListener("DOMContentLoaded", loadUnits);
   </script>
 </body>
 </html>
