--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
   <script>
     const supabase = supabase.createClient(
       "https://vaobmohukgcqfvnclqyh.supabase.co",
-      "your-anon-public-key-here"
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M
+"
     );
 
     async function loadUnits() {
