--- a/index.html
+++ b/index.html
@@ -4,145 +4,128 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1.5.10/css/pico.min.css" />
   <style>
     body {
-      background-color: #f8f9fa;
-      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: start;
+      min-height: 100vh;
+      background: #f5f7fa;
     }
-
-    .booking-form {
+    main {
       max-width: 500px;
-      margin: 50px auto;
+      margin-top: 2rem;
+      padding: 2rem;
       background: white;
-      padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      border-radius: 1rem;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     }
-
-    .form-control,
-    .form-select {
-      background-color: #e9f0ff;
+    h1 {
+      text-align: center;
     }
-
-    .btn-primary {
-      background-color: #006aff;
-      border: none;
-    }
-
-    .btn-primary:hover {
-      background-color: #0051c9;
+    .logo {
+      display: block;
+      margin: 0 auto 1rem;
+      width: 80px;
     }
   </style>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 </head>
 <body>
-  <div class="booking-form text-center">
-    <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" class="mb-3">
-    <h2 class="mb-3">Slide Guys Booking</h2>
+  <main>
+    <img src="https://reactjs.org/logo-og.png" alt="Logo" class="logo" />
+    <h1>Slide Guys Booking</h1>
     <p>Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
-    
-    <form id="bookingForm">
-      <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
-      <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
-      <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
-      <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
-      <select id="unit" class="form-select mb-2" required>
+    <form id="booking-form">
+      <input type="text" id="name" placeholder="Full Name" required />
+      <input type="tel" id="phone" placeholder="Phone Number" required />
+      <input type="email" id="email" placeholder="Email Address" required />
+      <input type="text" id="address" placeholder="Delivery Address" required />
+      <select id="unit" required>
         <option value="" disabled selected>Select a unit</option>
       </select>
-      <input type="date" id="date" class="form-control mb-3" required />
-      <button type="submit" class="btn btn-primary w-100">Reserve</button>
+      <input type="date" id="date" required />
+      <button type="submit">Reserve</button>
     </form>
+    <p id="status-message"></p>
+  </main>
 
-    <div id="successMessage" class="mt-3 text-success" style="display:none;">
-      Booking successful!
-    </div>
-    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
-      That unit is already booked on this date.
-    </div>
-  </div>
-
-  <!-- Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
-    document.addEventListener('DOMContentLoaded', async () => {
-      const today = new Date().toISOString().split('T')[0];
-      document.getElementById('date').setAttribute('min', today);
+    // Supabase
+    const supabase = supabase.createClient(
+      "https://vaobmohukgcqfvnclqyh.supabase.co",
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M"
+    );
 
-      const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
-      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
-      const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
+    // EmailJS
+    emailjs.init("PXm_wNk9aIao8Hlpp");
 
-      // Load Units into Dropdown
-      async function loadUnits() {
-        const { data, error } = await supabase.from('units').select('name');
-        const unitSelect = document.getElementById('unit');
+    async function loadUnits() {
+      const { data, error } = await supabase.from("units").select("name");
 
-        if (error) {
-          console.error('Error loading units:', error);
-          return;
-        }
-
-        data.forEach(unit => {
-          const option = document.createElement('option');
-          option.value = unit.name;
-          option.textContent = unit.name;
-          unitSelect.appendChild(option);
-        });
+      if (error) {
+        console.error("Error loading units:", error.message);
+        return;
       }
 
-      await loadUnits();
+      if (!data || data.length === 0) {
+        console.warn("No units returned from Supabase.");
+        return;
+      }
 
-      // Handle Form Submission
-      document.getElementById('bookingForm').addEventListener('submit', async (e) => {
-        e.preventDefault();
-
-        const name = document.getElementById('name').value.trim();
-        const phone = document.getElementById('phone').value.trim();
-        const email = document.getElementById('email').value.trim();
-        const address = document.getElementById('address').value.trim();
-        const unitName = document.getElementById('unit').value;
-        const date = document.getElementById('date').value;
-
-        // Lookup unit ID by name
-        const { data: unitData, error: unitError } = await supabase
-          .from('units')
-          .select('id')
-          .eq('name', unitName)
-          .single();
-
-        if (unitError || !unitData) {
-          alert('Error finding unit ID for "' + unitName + '"');
-          return;
-        }
-
-        const unitId = unitData.id;
-
-        // Check if unit already booked on selected date
-        const { data: existing, error: checkError } = await supabase
-          .from('bookings')
-          .select('*')
-          .eq('unit', unitId)
-          .eq('date', date);
-
-        if (existing && existing.length > 0) {
-          document.getElementById('errorMessage').style.display = 'block';
-          document.getElementById('successMessage').style.display = 'none';
-          return;
-        }
-
-        // Insert booking
-        const { error: insertError } = await supabase.from('bookings').insert([
-          { name, phone, email, address, unit: unitId, date }
-        ]);
-
-        if (insertError) {
-          alert('Error booking: ' + insertError.message);
-        } else {
-          document.getElementById('successMessage').style.display = 'block';
-          document.getElementById('errorMessage').style.display = 'none';
-          document.getElementById('bookingForm').reset();
-        }
+      const unitSelect = document.getElementById("unit");
+      data.forEach(unit => {
+        const option = document.createElement("option");
+        option.value = unit.name;
+        option.textContent = unit.name;
+        unitSelect.appendChild(option);
       });
+
+      console.log("Units loaded:", data);
+    }
+
+    document.addEventListener("DOMContentLoaded", loadUnits);
+
+    document.getElementById("booking-form").addEventListener("submit", async function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById("name").value;
+      const phone = document.getElementById("phone").value;
+      const email = document.getElementById("email").value;
+      const address = document.getElementById("address").value;
+      const unit = document.getElementById("unit").value;
+      const date = document.getElementById("date").value;
+
+      const { error } = await supabase.from("bookings").insert([{ name, phone, email, address, unit, date }]);
+
+      const status = document.getElementById("status-message");
+
+      if (error) {
+        console.error("Booking failed:", error.message);
+        status.textContent = "There was an error with your reservation. Please try again.";
+        return;
+      }
+
+      emailjs.send("service_1zxrd0j", "template_nqep0gt", {
+        name, phone, email, address, unit, date
+      }).then(() => {
+        console.log("Customer email sent");
+      }).catch(err => {
+        console.error("Customer email error:", err);
+      });
+
+      emailjs.send("service_1zxrd0j", "template_6z2dcsj", {
+        name, phone, email, address, unit, date
+      }).then(() => {
+        console.log("Business email sent");
+      }).catch(err => {
+        console.error("Business email error:", err);
+      });
+
+      status.textContent = "Booking successful! A confirmation has been sent to your email.";
+      document.getElementById("booking-form").reset();
     });
   </script>
 </body>
