--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
     .btn-primary:hover {
       background-color: #0051c9;
     }
+
+    .logo {
+      max-height: 80px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+    }
   </style>
 </head>
 <body>
   <div class="booking-form text-center">
-    <img src="https://via.placeholder.com/150x50?text=Slide+Guys+Logo" alt="Slide Guys Logo" class="mb-3">
+    <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
     <p>Select a unit and the date you would like to reserve. No cancellations.<br>Rescheduling is subject to availability.</p>
     
