--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="booking-form text-center">
     <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
-    <p>Select a unit and the date you would like to reserve.<br> No cancellations.<br>Rescheduling is subject to availability.<br>A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation</p>
+    <p>Select a unit and the date you would like to reserve.<br> No cancellations.<br>Rescheduling is subject to availability.<br>A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation. We accept cash, check, venmo, cash app, and pay-pal.</p>
     
     <form id="bookingForm">
       <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
